--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-12  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2008-02-12  Danishka Navin  <danishka@gmail.com>
 
 	* si.po: Updated Sinhala translation.
