--- a/po/ar.po
+++ b/po/ar.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Arabic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-01-31 08:07+0000\n"
-"PO-Revision-Date: 2008-02-02 14:07-0000\n"
-"Last-Translator: Abou Manal <aboumanal@gmail.com>\n"
+"POT-Creation-Date: 2008-02-08 08:17+0000\n"
+"PO-Revision-Date: 2008-02-17 11:51+0100\n"
+"Last-Translator: Djihed Afifi <djihed@gmail.com>\n"
 "Language-Team: Arabeyes <doc@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,8 +61,8 @@ msgid "Resizable"
 msgstr "قابل للتحجيم"
 
 #: ../gdl/gdl-dock-item.c:260
-msgid "If set, the dock item can be resized when docked in a paned"
-msgstr " إذا ما تم تعيينه، فإنه يمكن إعادة تحجيم عنصر الإرساء عند   "
+msgid "If set, the dock item can be resized when docked in a GtkPanel widget"
+msgstr "إذا ما تم تعيينه، فإنه يمكن إعادة تحجيم عنصر الإرساء عند التثبيت في قطعة GtkPanel"
 
 #: ../gdl/gdl-dock-item.c:267
 msgid "Item behavior"
