--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* LINGUAS: Added th (Thai).
+	* th.po: Added Thai translation.
+
 2008-02-18  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* nl.po: Updated Dutch translation by Wouter Bolsterlee.
