--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-24  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2008-02-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* LINGUAS: Added th (Thai).
