--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 0.7.10
+
+* Avoid glib critical warnings
+* Translation updates: si, pt, fi, ne, ca, pl, en_GB, ar, nl, th and de.
+
 Changes in 0.7.9
 
 * Added gtk-doc documentation (12% coverage)
