--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-26  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated
+
 2008-02-24  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
