--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-27  Jonh Wendell  <jwendell@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation by Og Maciel.
+
 2008-02-26  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated
