--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-27  Claude Paroz  <claude@2xlibre.net>
+
+	* fr.po: Updated French translation by Robert-André Mauchin and Claude
+	Paroz.
+
 2008-02-27  Jonh Wendell  <jwendell@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation by Og Maciel.
