--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-03-01  Jovan Naumovski  <jovan@lugola.net>
  
  	* mk.po: Updated Macedonian translation.
