--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-02  Jovan Naumovski  <jovan@lugola.net>
+ 
+ 	* mk.po: Updated Macedonian translation.
+
 2008-03-02  Gintautas Miliauskas  <gintas@akl.lt>
 
 	* LINGUAS: Added lt (Lithuanian).
