--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-08 Maxim Dziumanenko <dziumanenko@gmail.com>
+
+        * uk.po: Update Ukrainian translation.
+
 2008-03-04  Rajesh Ranjan  <rajeshkajha@yahoo.com>
  
  	* hi.po: added Hindi translation.
