--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-08  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Updated Czech translation by Lucas Lommer.
+
 2008-03-08 Maxim Dziumanenko <dziumanenko@gmail.com>
 
         * uk.po: Update Ukrainian translation.
