--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in 0.7.11
+
+* Translation updates: hu, pt_BR, fr, mk, es, lt, hi, uk and cs
+
 Changes in 0.7.10
 
 * Avoid glib critical warnings
