--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-13  Simos Xenitellis  <simos@gnome.org>
+
+	* el.po: Updated Greek translation by Giannis Katsampiris.
+
 2008-03-11 Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish translation
