Updated Italian translation by Gennaro Bellizio.
2008-03-23  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation by Gennaro Bellizio.

svn path=/trunk/; revision=467

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-23  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation by Gennaro Bellizio.
+
 2008-03-13  Simos Xenitellis  <simos@gnome.org>
 
 	* el.po: Updated Greek translation by Giannis Katsampiris.
