--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-07  Yuriy Penkin <yura.penkin@gmail.com>
+
+	* ru.po: Updated Russian translation.
+
 2008-03-25  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
         * LINGUAS: Added zh_HK zh_TW to the list.
