--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-19  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Djihed Afifi.
+
 2008-04-07  Yuriy Penkin <yura.penkin@gmail.com>
 
 	* ru.po: Updated Russian translation.
