--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2008-06-29  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
