--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-11  Runa Bhattachajee <runabh@gmail.com>
+
+	* ps.po: Added Pashto Translations by Zabeeh Khan
+	* LINGUAS: Added Pashto (ps) to the list of languages.
+
 2008-07-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
