--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-17  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian Translation.
+
 2008-07-11  Runa Bhattachajee <runabh@gmail.com>
 
 	* ps.po: Added Pashto Translations by Zabeeh Khan
